# LangChain-OpenTutorial

01-Basic/: 06-LangChain-Expression-Language(LCEL).ipynb
04-Model/: 10-Ollama.ipynb
07-TextSplitter/: 02-RecursiveCharacterTextSplitter.ipynb  08-RecursiveJsonSplitter.ipynb
08-Embedding/: 03-HuggingFaceEmbeddings.ipynb
10-Retriever/: 01-VectorStoreRetriever.ipynb
17-LangGraph/01-Core-Features/: 11-LangGraph-Branching.ipynb  12-LangGraph-Conversation-Summaries.ipynb  14-LangGraph-Subgraph-Transform-State.ipynb  15-LangGraph-Streaming-steps.ipynb  16-LangGraph-Errors.ipynb  17-LangGraph-LongTermMemoryAgent.ipynb
CrewAI/: utils.py
CrewAI/guides/: concept-evaluating-usecase.ipynb
CrewAI/quickstart/: README.md  pyproject.toml
CrewAI/quickstart/src/quickstart/: crew.py  main.py
GenAI_Agent/: 00_simple_conversational_agent.ipynb  01_simple_question_answering_agent.ipynb  02_simple_data_analysis_agent_notebook.ipynb  03_langgraph-tutorial.ipynb  04_Academic_Task_Learning_Agent_LangGraph.ipynb  langgraph_basic.ipynb
RAG-techniques/: 00_runnable_script.py  00_simple_rag_langchain.ipynb  01_simple_rag_csv.ipynb  02_reliable_rag.ipynb  03_choose_chunk_size.ipynb  04_proposition_chunking.ipynb  10_query_transformation.ipynb  11_HyDe_Hypothetical_Document_Embedding.ipynb  20_contextual_chunk_headers.ipynb  21_relevant_segment_extraction.ipynb  evaluate_rag.py  helper_functions.py
RAG-techniques/law_gtdb/: evaluation.py  helper.py  rag_v1.ipynb  (+2 more)
full-stack-retrieval/: agentic_chunker_ollama.py  agentic_chunker_test.ipynb  multi-query.ipynb  multi-vector.ipynb
(+4 files in other folders)
